Try to fix horizontal alignment of search fields and search results.

--- a/css/div.css
+++ b/css/div.css
@@ -2,6 +2,10 @@ div.AutocompleteArea {
     background-color: #f8f8f8;
 }
 
+div.SectionContainer {
+	display: inline;
+}
+
 div.AutocompleteArea.container {
 	position: absolute;
 	z-index: 1;
